OHRM-875:Fix caching textarea values on Firefox

--- a/symfony/plugins/orangehrmAdminPlugin/web/css/languageCustomizationSuccess.css
+++ b/symfony/plugins/orangehrmAdminPlugin/web/css/languageCustomizationSuccess.css
@@ -11,3 +11,7 @@
 .table-top-btn {
     display: none;
 }
+
+#resultTable td {
+    vertical-align: top
+}
